--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "adm-zip": "^0.4.14",
     "body-parser": "^1.19.0",
+    "canvas": "^2.6.1",
     "express": "^4.17.1",
     "express-fileupload": "^1.1.7-alpha.3",
     "mocha": "^7.1.2",
