--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.17.1",
     "express-fileupload": "^1.1.7-alpha.3",
     "mocha": "^7.1.2",
-    "nodemon": "^2.0.3"
+    "nodemon": "^2.0.3",
+    "promise": "^8.1.0"
   }
 }
