--- a/package.json
+++ b/package.json
@@ -14,10 +14,14 @@
     "adm-zip": "^0.4.14",
     "body-parser": "^1.19.0",
     "canvas": "^2.6.1",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-fileupload": "^1.1.7-alpha.3",
     "mocha": "^7.1.2",
     "nodemon": "^2.0.3",
     "promise": "^8.1.0"
+  },
+  "engines": {
+    "node": ">10.x"
   }
 }
